tests/typecheck/should_compile/T7050.hs
module T7050 where

data Foo a = Foo {-# UNPACK #-} !(Foo a) 
